fix word wrapping/breaking once and for all

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -113,3 +113,13 @@ small {
 big {
 	font-size: 125%;
 }
+
+// Word Wrapping
+.entry-title,
+.entry-content,
+.comments-title,
+.comment-content,
+.widget-title,
+.widget {
+	@include word-break();
+}
