--- a/sass/modules/_comments.scss
+++ b/sass/modules/_comments.scss
@@ -21,10 +21,6 @@
 	float: left;
 }
 
-.comment-content a {
-	@include word-break(keep-all);
-}
-
 .bypostauthor {
 	display: block;
 }
